force-app/main/default/objects/Subscription_Doc__c/Subscription_Doc__c.object-meta.xml
<CustomObject>
    <description>Tracks dual-signature subscription documents for a DPEG offering commitment. Captures primary and secondary signer status, single-signer handling, a finalized indicator and funding-instruction release state.</description>
    <label>Subscription Document</label>
    <nameField>
        <displayFormat>SD-{0000}</displayFormat>
        <label>Subscription Document Name</label>
        <startingNumber>1000</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>