force-app/main/default/objects/Subscription_Doc__c/fields/Commitment__c.field-meta.xml
<CustomField>
    <fullName>Commitment__c</fullName>
    <label>Commitment</label>
    <description>The commitment record this subscription document fulfills.</description>
    <inlineHelpText>Select the related commitment.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Commitment__c</referenceTo>
    <relationshipLabel>Subscription Documents</relationshipLabel>
    <relationshipName>Subscription_Docs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>