force-app/main/default/objects/Subscription_Doc__c/fields/Finalized__c.field-meta.xml
<CustomField>
    <fullName>Finalized__c</fullName>
    <label>Finalized</label>
    <description>Derived flag indicating the document is fully executed: primary signed and either single-signer or secondary signed.</description>
    <inlineHelpText>Read-only. True when all required signatures are complete.</inlineHelpText>
    <type>Checkbox</type>
    <formula><![CDATA[AND(Primary_Signed__c, OR(Single_Signer__c, Secondary_Signed__c))]]></formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>