force-app/main/default/objects/Subscription_Doc__c/fields/Funding_Instructions_Status__c.field-meta.xml
<CustomField>
    <fullName>Funding_Instructions_Status__c</fullName>
    <label>Funding Instructions Status</label>
    <description>Controls whether funding instructions have been released to the investor.</description>
    <inlineHelpText>Locked = instructions withheld until signatures complete; Sent = released.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Locked</fullName>
                <default>true</default>
                <label>Locked</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>