force-app/main/default/objects/Subscription_Doc__c/fields/Investing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Investing_Entity__c</fullName>
    <label>Investing Entity</label>
    <description>The investing entity (Account) executing this subscription document.</description>
    <inlineHelpText>Select the investing-entity Account.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscription Documents</relationshipLabel>
    <relationshipName>Subscription_Docs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>