force-app/main/default/objects/Subscription_Doc__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Note</label>
    <description>Free-text log of signature issues or notes related to this subscription document.</description>
    <inlineHelpText>Record any signature issues or relevant notes here.</inlineHelpText>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>