force-app/main/default/objects/Subscription_Doc__c/fields/Offering__c.field-meta.xml
<CustomField>
    <fullName>Offering__c</fullName>
    <label>Offering</label>
    <description>The offering this subscription document is associated with.</description>
    <inlineHelpText>Select the related offering.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Offering__c</referenceTo>
    <relationshipLabel>Subscription Documents</relationshipLabel>
    <relationshipName>Subscription_Docs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>