force-app/main/default/objects/Subscription_Doc__c/fields/Primary_Signature_Status__c.field-meta.xml
<CustomField>
    <fullName>Primary_Signature_Status__c</fullName>
    <label>Primary Signature Status</label>
    <description>Workflow status of the primary signer's e-signature.</description>
    <inlineHelpText>Pending = not yet sent; Sent = awaiting signature; Signed = complete.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>