force-app/main/default/objects/Subscription_Doc__c/fields/Primary_Signed__c.field-meta.xml
<CustomField>
    <fullName>Primary_Signed__c</fullName>
    <label>Primary Signed</label>
    <description>Indicates the primary signer has executed the subscription document.</description>
    <inlineHelpText>Checked once the primary signer has signed.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>