force-app/main/default/objects/Subscription_Doc__c/fields/Secondary_Signature_Status__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Signature_Status__c</fullName>
    <label>Secondary Signature Status</label>
    <description>Workflow status of the secondary signer's e-signature, including single-signer handling.</description>
    <inlineHelpText>Use Single Signer or N/A when no secondary signature is required.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Awaiting Primary</fullName>
            </value>
            <value>
                <fullName>Single Signer</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>