force-app/main/default/objects/Subscription_Doc__c/fields/Secondary_Signed__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Signed__c</fullName>
    <label>Secondary Signed</label>
    <description>Indicates the secondary signer has executed the subscription document.</description>
    <inlineHelpText>Checked once the secondary signer has signed.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>