force-app/main/default/objects/Subscription_Doc__c/fields/Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date__c</fullName>
    <label>Signed Date</label>
    <description>Date the subscription document was fully executed.</description>
    <inlineHelpText>Enter the date all required signatures were completed.</inlineHelpText>
    <type>Date</type>
</CustomField>