force-app/main/default/objects/Subscription_Doc__c/fields/Single_Signer__c.field-meta.xml
<CustomField>
    <fullName>Single_Signer__c</fullName>
    <label>Single Signer</label>
    <description>Indicates the document requires only a single (primary) signature.</description>
    <inlineHelpText>Checked when only one signer is required for this document.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>