force-app/main/default/objects/Subscription_Doc__c/listViews/Unsigned.listView-meta.xml
<ListView>
    <fullName>Unsigned</fullName>
    <label>Unsigned Subscription Docs</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Finalized__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <columns>NAME</columns>
    <columns>Investing_Entity__c</columns>
    <columns>Primary_Signature_Status__c</columns>
    <columns>Secondary_Signature_Status__c</columns>
</ListView>